@@ -237,12 +237,14 @@ keyword.
 
 By default, all filename parts and
 class/function names of a test function are put into the set
-of keywords for a given test.  You may specify additional 
+of keywords for a given test.  You can specify additional 
 kewords like this::
 
     @py.test.mark(webtest=True)
     def test_send_http():
         ... 
+
+and then use those keywords to select tests. 
 
 disabling a test class
 ---------------------- 
